<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
  	<groupId>org.vaadin</groupId>
  	<artifactId>chronographer</artifactId>
  	<packaging>jar</packaging>
 	<version>0.0.5</version>

	<properties>
	   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	   	<project.organization>Vaadin Ltd</project.organization>
	   	<vaadin.version.maven>7.0.5</vaadin.version.maven>
	   	<vaadin.plugin.version>7.0.5</vaadin.plugin.version>
	
	   	<snapshot.repository.url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</snapshot.repository.url>
	   	<Implementation-Version>${project.version}</Implementation-Version>
		<Implementation-Title>ChronoGrapher</Implementation-Title>
		<Vaadin-Addon>chronographer-${project.version}.jar</Vaadin-Addon>
		<Implementation-Vendor>Johannes Tuikkala Vaadin Ltd</Implementation-Vendor>
	</properties>
	 
	<licenses>
		<license>
		<name>Apache 2</name>
		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		<distribution>repo</distribution>
		</license>
	</licenses>

	<repositories>
		<repository>
		<id>vaadin-addons</id>
		<url>http://maven.vaadin.com/vaadin-addons</url>
		</repository>
		<repository>
		<id>vaadin-snapshots</id>
		<url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
		<releases>
		<enabled>false</enabled>
		</releases>
		<snapshots>
		<enabled>true</enabled>
		</snapshots>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
		<id>vaadin-snapshots</id>
		<url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
		<releases>
		<enabled>false</enabled>
		</releases>
		<snapshots>
		<enabled>true</enabled>
		</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
  		<dependency>
		<groupId>com.vaadin</groupId>
		<artifactId>vaadin-server</artifactId>
		<version>${vaadin.version.maven}</version>
	</dependency>
	<dependency>
		<groupId>com.vaadin</groupId>
		<artifactId>vaadin-client</artifactId>
		<version>${vaadin.version.maven}</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
        <groupId>com.vaadin</groupId>
        <artifactId>vaadin-client-compiler</artifactId>
        <version>${vaadin.version.maven}</version>
        <scope>provided</scope>
    </dependency>
	<dependency>
		<groupId>com.vaadin</groupId>
		<artifactId>vaadin-themes</artifactId>
		<version>${vaadin.version.maven}</version>
	</dependency>

	<dependency>
		<groupId>maven</groupId>
		<artifactId>dom4j</artifactId>
		<version>1.7-20060614</version>
	</dependency>
	<dependency>
		<groupId>com.google.code.gson</groupId>
		<artifactId>gson</artifactId>
		<version>2.1</version>
	</dependency>
	</dependencies>

  	<build>      
	    <plugins>
	      	<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>3.0</version>
		        <configuration>
		          <source>1.6</source>
		          <target>1.6</target>
		          <encoding>UTF-8</encoding>
		        </configuration>
	      	</plugin>
	
	      	<plugin>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-maven-plugin</artifactId>
				<version>${vaadin.plugin.version}</version>
				<configuration>
					<webappDirectory>src/main/webapp/VAADIN/widgetsets</webappDirectory>
					<hostedWebapp>src/main/webapp/VAADIN/widgetsets</hostedWebapp>
					<modules>
						<module>org.vaadin.chronographer.gwt.ChronoGrapherWidgetSet</module>
					</modules>
					<force>true</force>
					<extraJvmArgs>-Xmx1g -Xms1g -XX:MaxPermSize=512m</extraJvmArgs>
					<runTarget>xsite</runTarget>
					<runTarget>http://localhost:8080/chronographer</runTarget>
              		<noServer>true</noServer>
              		<port>8080</port>
              		<strict>true</strict>
              		<draftCompile>true</draftCompile>
              		<style>DETAILED</style>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>resources</goal>
							<goal>compile</goal>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
		  	</plugin>
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<webResources>
						<resource>
							<directory>src/main/webapp/VAADIN/themes</directory>
							<targetPath>VAADIN/themes</targetPath>
							<includes>
								<include>**/*</include>
							</includes>
						</resource>
					</webResources>
					<warSourceExcludes>VAADIN/gwt-unitCache/**,VAADIN/widgetsets/WEB-INF/**</warSourceExcludes>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifest>
							<addClasspath>false</addClasspath>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Vaadin-Widgetsets>org.vaadin.chronographer.gwt.ChronoGrapherWidgetSet</Vaadin-Widgetsets>
						</manifestEntries>
					</archive>
					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
					<warName>chronographer.war</warName>
				</configuration>
			</plugin> -->
	
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<filesets>
						<fileset>
								<directory>src/main/webapp/VAADIN</directory>
								<includes>
									<include>widgetsets/*/**</include>
									<include>gwt-unitCache/**</include>
								</includes>
								<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<!-- <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <version>2.1.2</version>
		        <configuration>
		          <archive>
		            <index>true</index>
		            <manifest>
		              <addClasspath>false</addClasspath>
		              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
		            </manifest>
		          </archive>
		          <outputDirectory>target/extra</outputDirectory>
		          <attach>false</attach>
		        </configuration>
		        <executions>
					<execution>
						<id>create-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
		    </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<index>true</index>
						<manifest>
							<addClasspath>true</addClasspath>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Title>ChronoGrapher</Implementation-Title>
							<Vaadin-Package-Version>1</Vaadin-Package-Version>
							<Vaadin-Widgetsets>org.vaadin.chronographer.gwt.ChronoGrapherWidgetSet</Vaadin-Widgetsets>
						</manifestEntries>
					</archive>
					<!-- exclude other META-INF data under build directory -->
					<includes>
						<include>META-INF/maven/${project.groupId}/${project.artifactId}/**</include>
						<include>org/**</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-assembly-plugin</artifactId>
		        <version>2.2.1</version>
		        <configuration>
		            <appendAssemblyId>false</appendAssemblyId>
		            <descriptors>
		                <descriptor>assembly/assembly.xml</descriptor>
		            </descriptors>
		        </configuration>
		        <executions>
		            <execution>
		                <id>make-assembly</id>
		                <phase>package</phase>
		                <goals>
		                    <goal>single</goal>
		                </goals>
		            </execution>
		        </executions>
		    </plugin>
	      	<plugin>
		        <groupId>org.mortbay.jetty</groupId>
		        <artifactId>maven-jetty-plugin</artifactId>
		        <version>6.1.24</version>
		        <configuration>
		          <stopPort>9966</stopPort>
		          <stopKey>chronographer</stopKey>
		          <!-- Redeploy every x seconds if changes are detected, 0 for no automatic redeployment -->
		          <scanIntervalSeconds>0</scanIntervalSeconds>
		          <!-- make sure Jetty also finds the widgetset -->
		          <webAppConfig>
		            <contextPath>/</contextPath>
		          </webAppConfig>
		        </configuration>
	      	</plugin>
		<!-- <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-javadoc-plugin</artifactId>
			<executions>
				<execution>
					<id>attach-javadocs</id>
					<goals>
						<goal>jar</goal>
					</goals>
				</execution>
			</executions>
		</plugin> -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-resources-plugin</artifactId>
			<version>2.4.2</version>
			<configuration>
				<encoding>UTF-8</encoding>
			</configuration>
		</plugin>
	  </plugins>
    
    <resources>
      <resource>
        <directory>src/main/java</directory>
      </resource>
      <resource>
		<directory>src/test/java</directory>
     </resource>
     <resource>
		<directory>src/main/webapp</directory>
     </resource>
     <resource>
		<directory>src/main/resources</directory>
     </resource>
    </resources>
    
    <pluginManagement>
		<plugins>
			<!--This plugin's configuration is used to store Eclipse m2e settings
			only. It has no influence on the Maven build itself. -->
			<plugin>
				<groupId>org.eclipse.m2e</groupId>
				<artifactId>lifecycle-mapping</artifactId>
				<version>1.0.0</version>
				<configuration>
				<lifecycleMappingMetadata>
					<pluginExecutions>
						<pluginExecution>
							<pluginExecutionFilter>
								<groupId>
									com.vaadin
								</groupId>
								<artifactId>
									vaadin-maven-plugin
								</artifactId>
								<versionRange>
									[7.0-SNAPSHOT,)
								</versionRange>
								<goals>
									<goal>resources</goal>
									<goal>update-widgetset</goal>
									<goal>compile</goal>
								</goals>
							</pluginExecutionFilter>
							<action>
							<ignore />
							</action>
						</pluginExecution>
					</pluginExecutions>
				</lifecycleMappingMetadata>
				</configuration>
			</plugin>
		</plugins>
	</pluginManagement>
 </build>
</project>
